--- a/aboutus.html
+++ b/aboutus.html
@@ -16,9 +16,7 @@
 
     <title>NuCamp: A Better Way To Camp</title>
 </head>
-
 <body>
-
     <header class="jumbotron jumbotron-fluid">
         <div class="container">
             <div class="row">
@@ -29,7 +27,25 @@
             </div> 
         </div>
     </header>
-
+    <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
+        <div class=container>
+            <button class=navbar-toggler type=button data-toggle=collapse data-target=#nucampNavbar>
+                <span class=nav-toggler-icon></span>
+            </button>
+        <div class="collapse navbar-collapse" id=nucampNavbar>
+            <ul class=navbar-nav>
+                <li class="navbar-item active"> <a class=nav-link href="index.html">Home</a></li>
+                <li class="navbar-item "> <a class=nav-link href="aboutUs.html">About</a></li>
+                <li class="navbar-item "> <a class=nav-link href="#">Sites</a></li>
+                <li class="navbar-item "> <a class=nav-link href="#">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <ol class=breadcrumb>
+        <li class=breadcrumb-item> <a href=index.html> Home</a> </li>
+        <li class="breadcrumb-item active">About Us</li>
+    </ol>
     <div>
         <div>
             <div class=container>
