--- a/index.html
+++ b/index.html
@@ -31,6 +31,22 @@
         </div>
     </header>
 
+    <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
+        <div class=container>
+            <button class=navbar-toggler type=button data-toggle=collapse data-target=#nucampNavbar>
+                <span class=nav-toggler-icon></span>
+            </button>
+        <div class="collapse navbar-collapse" id=nucampNavbar>
+            <ul class=navbar-nav>
+                <li class="navbar-item active"> <a class=nav-link href="index.html">Home</a></li>
+                <li class="navbar-item "> <a class=nav-link href="aboutUs.html">About</a></li>
+                <li class="navbar-item "> <a class=nav-link href="#">Sites</a></li>
+                <li class="navbar-item "> <a class=nav-link href="#">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
     <div class="container">
         <div class="row row-content align-items-center">
             <div class="col-sm-4 order-sm-last col-md-3">
