--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <!-- Additional CSS must be placed after Bootstrap CSS -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
 
         <title>NuCamp: A Better Way To Camp</title>
     </head>
@@ -38,10 +39,10 @@
             </button>
         <div class="collapse navbar-collapse" id=nucampNavbar>
             <ul class=navbar-nav>
-                <li class="navbar-item active"> <a class=nav-link href="index.html">Home</a></li>
-                <li class="navbar-item "> <a class=nav-link href="aboutUs.html">About</a></li>
-                <li class="navbar-item "> <a class=nav-link href="#">Sites</a></li>
-                <li class="navbar-item "> <a class=nav-link href="#">Contact</a></li>
+                <li class="navbar-item active"> <a class=nav-link href="index.html"><i class="fa fa-home fa-lg"> </i> Home</a></li>
+                <li class="navbar-item "> <a class=nav-link href="aboutUs.html"><i class="fa fa-info fa-lg"></i> About</a></li>
+                <li class="navbar-item "> <a class=nav-link href="#"><i class="fa fa-list fa-lg"></i> Sites</a></li>
+                <li class="navbar-item "> <a class=nav-link href="#"><i class="fa fa-address-card fa-lg"> Contact </i></a></li>
                 </ul>
             </div>
         </div>
@@ -93,14 +94,14 @@
         </div>
         <div class="col-6 col-sm-5 text-center">
             <h5>Social</h5>
-            <a href="http://instagram.com/">Instagram</a>
-            <a href="http://facebook.com/">Facebook</a>
-            <a href="http://twitter.com/">Twitter</a>
-            <a href="http://youtube.com/">YouTube</a>
+            <a href="http://instagram.com/"><i class="fa fa-instagram"> </i> Instagram</a></br>
+            <a href="http://facebook.com/"><i class="fa fa-facebook"> </i> Facebook</a></br>
+            <a href="http://twitter.com/"><i class="fa fa-twitter"> </i> Twitter</a></br>
+            <a href="http://youtube.com/"><i class="fa fa-youtube"> </i> YouTube</a></br>
         </div>
         <div class="col-sm-4">
-            Tel: 1-206-555-1234<br />
-            Email: campsites@nucamp.co
+           <i class="fa fa-phone fa-lg test-primary"> </i> Tel: 1-206-555-1234<br />
+            <i class="fa fa-envelope fa-lg test-primary"></i> Email: campsites@nucamp.co
         </div>
     </footer>
 
