--- a/aboutus.html
+++ b/aboutus.html
@@ -39,18 +39,24 @@
             </button>
         <div class="collapse navbar-collapse" id=nucampNavbar>
             <ul class=navbar-nav>
-                <li class="navbar-item active"> <a class=nav-link href="index.html"><i class="fa fa-home fa-lg"> </i> Home</a></li>
-                <li class="navbar-item "> <a class=nav-link href="aboutUs.html"><i class="fa fa-info fa-lg"></i> About</a></li>
+                <li class="navbar-item"> <a class=nav-link href="index.html"><i class="fa fa-home fa-lg"> </i> Home</a></li>
+                <li class="navbar-item active "> <a class=nav-link href="aboutUs.html"><i class="fa fa-info fa-lg"></i> About</a></li>
                 <li class="navbar-item "> <a class=nav-link href="#"><i class="fa fa-list fa-lg"></i> Sites</a></li>
                 <li class="navbar-item "> <a class=nav-link href="contactus.html"><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <ol class=breadcrumb>
+    <div class="container">
+        <div class="row">
+        <div class="col">
+    <ol class="breadcrumb">
         <li class=breadcrumb-item> <a href=index.html> Home</a> </li>
         <li class="breadcrumb-item active">About Us</li>
     </ol>
+    </div>
+    </div>
+    </div>
     <div>
         <div>
             <div class=container>
@@ -152,7 +158,8 @@
             </div>
         </div>
     </div>
-
+</div>
+</div>
     <footer class="site-footer">
         <div class="container">
             <div class="row">
@@ -176,7 +183,11 @@
             <a role="button" class="btn btn-link" href=tel:12065551234><i class="fa fa-phone fa-lg text-primary"></i> 1-206-555-1234</a></br>
             <a role=button class="btn btn-link" href=mailto:campsites@nucamp.co><i class="fa fa-envelope-o fa-lg text-primary"></i> campsites@nucamp.co</a>
         </div>
+            </div>
+            </div>
+
     </footer>
+
     <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
