--- a/contactus.html
+++ b/contactus.html
@@ -50,10 +50,9 @@
             </div>
         </div>
     </nav>
-
-    <div class="container">
-        <div class="row">
-            <div class="col">
+        <div class="container">
+            <div class="row">
+                <div class=col>
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                     <li class="breadcrumb-item active">Contact</li>
@@ -62,7 +61,9 @@
                 <hr />
             </div>
         </div>
+    
 
+    <div class="container">
         <div class="row row-content align-items-center">
             <div class="col-sm-4">
                 <h5>Our Address</h5>
@@ -77,7 +78,6 @@
                 <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
             </div>
         </div>
-
         <div class="row row-content">
             <div class="col-12">
                 <h2>Send us your Feedback</h2>
@@ -139,33 +139,30 @@
                 </form>
             </div>
        </div>
-
     </div>
-
-    <footer class="site-footer">
+</div>
+       <footer class="site-footer">
         <div class="container">
             <div class="row">
                 <div class="col-4 col-sm-2 offset-1">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="aboutus.html">About</a></li>
-                        <li><a href="#">Sites</a></li>
-                        <li><a href="contactus.html">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="col-6 col-sm-5 text-center">
-                    <h5>Social</h5>
+               <li><a href="index.html">Home</a></li>
+                <li><a href="aboutUs.html">About</a></li>
+                <li><a href="#">Sites</a></li>
+                <li><a href="contactus.html">Contact</a></li>
+            </ul>
+        </div>
+        <div class="col-6 col-sm-5 text-center">
+            <h5>Social</h5>
                     <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
                     <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
                     <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
                     <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
-                </div>
-                <div class="col-sm-4 text-center">
-                    <a role="button" class="btn btn-link" href=tel:12065551234><i class="fa fa-phone fa-lg text-primary"></i> 1-206-555-1234</a></br>
-                    <a role=button class="btn btn-link" href=mailto:campsites@nucamp.co><i class="fa fa-envelope-o fa-lg text-primary"></i> campsites@nucamp.co</a>
-                </div>
-           </div>
+        </div>
+        <div class="col-sm-4 text-center">
+            <a role="button" class="btn btn-link" href=tel:12065551234><i class="fa fa-phone fa-lg text-primary"></i> 1-206-555-1234</a></br>
+            <a role=button class="btn btn-link" href=mailto:campsites@nucamp.co><i class="fa fa-envelope-o fa-lg text-primary"></i> campsites@nucamp.co</a>
         </div>
     </footer>
 
