--- a/index.html
+++ b/index.html
@@ -33,9 +33,66 @@
                     <h2>a better way to camp</h2>
                 </div>
                 <div class="col-md-4 col-xl-2">
-                    <a href="#reserveForm" role="button" class="btn btn-lg btn-info" data-toggle="tooltip" data-placement="bottom" data-html="true" title="Or call us at <br /><strong>1-206-555-1234</strong>">Reserve Campsite</a>
+                    <button role="button" class="btn btn-lg btn-info" data-toggle="modal" data-target="#reserveModal">Reserve Campsite</button>
                 </div>
             </div>
+        </div>
+
+        <div class="modal fade " id="reserveModal" tabindex="-1" role="dialog" aria-labelledby="reserveModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg" role="document">
+              <div class="modal-content">
+                <div class="modal-header bg-info text-white">
+                        <h3 class="modal-title">Reserve a Campsite </h3>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                          </button>
+                </div>
+                        <div class="modal-body text-secondary">
+                            <div class="container-fluid">
+                                <form id="reserveModal">
+                                    <div class="form-group row">
+                                    <label input=select for=numCampers class="col-sm-6 col-form-label">Number of Campers</label>
+                                    <div class="col">
+                                        <select id=numCampers name="numCampers" class="form-control">
+                                            <option selected>Select...</option>
+                                            <option value="1">1</option>
+                                            <option value="2">2</option>
+                                            <option value="3">3</option>
+                                            <option value="4">4</option>
+                                            <option value="5">5</option>
+                                            <option value="6">6</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label for=date class="col-sm-6 col-form-label">Date</label>
+                                    <div class="col">
+                                    <input type="date" id="date" name="date" class="form-control" placeholder>
+                                    </input>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label for=siteType class="col-sm-6 col-form-label">Campsite Type</label>
+                                    <div class="col btn-group-toggle btn-group" data-toggle="buttons">
+                                            <label class="btn btn-success active">
+                                              <input type="radio" name="siteType" id="tent" autocomplete="off" checked> Tent
+                                            </label>
+                                            <label class="btn btn-primary">
+                                              <input type="radio" name="siteType" id="rv" autocomplete="off"> RV
+                                            </label>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col">
+                                        <button class="btn btn-secondary" type="cancel">Cancel</button>
+                                        <button class="btn btn-primary" type="submit">Search</button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>     
         </div>
     </header>
 
@@ -131,6 +188,7 @@
                             <span class="sr-only">Next</span>
                         </a>
                 </div>
+                </div>
             </div>
         </div>
         <div class="row row-content align-items-center">
@@ -184,46 +242,6 @@
        </div>
        </div>
 
-<div class="row row-content align-items-center">
-        <div class="col-sm-6 mx-auto">
-            <div class="card">
-                <h3 class="card-header bg-info text-white">Reserve a Campsite</h3>
-                <div class="card-body">
-                    <form id="reserveForm">
-                        <div class="form-group row">
-                        <label input=select for=numCampers class="col-sm-6 col-form-label">Number of Campers</label>
-                        <div class="col">
-                            <select id=numCampers name="numCampers" class="form-control">
-                                <option selected>Select...</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                                <option value="4">4</option>
-                                <option value="5">5</option>
-                                <option value="6">6</option>
-                            </select>
-                        </div>
-                    </div>
-                        <div class="form-group row">
-                            <label for=date class="col-sm-6 col-form-label">Date</label>
-                            <div class="col">
-                            <input type="date" id="date" name="date" class="form-control" placeholder>
-                            </input>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col">
-                                <button class="btn btn-primary" type="submit">Search</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>     
-</div>
-    
-
     <footer class="site-footer">
         <div class="container">
             <div class="row">
@@ -254,13 +272,11 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
+    
     <script>
-        $(function () {
-            $('[data-toggle="tooltip"]').tooltip()
-        })
+        $('#reserveModal').modal('focus')
     </script>
-
+   
 </body>
 
 </html>
