--- a/index.html
+++ b/index.html
@@ -188,6 +188,14 @@
                             <span class="sr-only">Next</span>
                         </a>
                 </div>
+                <div class="btn-group" id="carouselButton">
+                    <button class="btn btn-danger btn-sm" id="carouselPause">
+                        <i class="fa fa-pause"></i>
+                    </button>
+                    <button class="btn btn-danger btn-sm" id="carouselPlay">
+                        <i class="fa fa-play"></i>
+                    </button>
+                </div>
                 </div>
             </div>
         </div>
@@ -276,7 +284,17 @@
     <script>
         $('#reserveModal').modal('focus')
     </script>
-   
+   <script>
+       $function() {
+           $(".carousel").carousel({interval:2000});
+           $("#carouselPause").click(function(){
+                $(".carousel").carousel("pause");
+            });
+            $("#carouselPlay").click(function(){
+            $(".carousel").carousel("cycle");
+            });
+        });
+   </script>
 </body>
 
 </html>
