--- a/index.html
+++ b/index.html
@@ -284,17 +284,23 @@
     <script>
         $('#reserveModal').modal('focus')
     </script>
+   
    <script>
-       $function() {
-           $(".carousel").carousel({interval:2000});
-           $("#carouselPause").click(function(){
+    $(function() {
+        $(".carousel").carousel( { interval: 2000 } );
+        $("#carouselButton").click(function(){
+            if ($("#carouselButton").children("i").hasClass("fa-pause")) {
                 $(".carousel").carousel("pause");
-            });
-            $("#carouselPlay").click(function(){
-            $(".carousel").carousel("cycle");
-            });
+                $("#carouselButton").children("i").removeClass("fa-pause");
+                $("#carouselButton").children("i").addClass("fa-play");
+            } else {
+                $(".carousel").carousel("cycle");
+                $("#carouselButton").children("i").removeClass("fa-play");
+                $("#carouselButton").children("i").addClass("fa-pause"); 
+            }
         });
-   </script>
+    });
+</script>
 </body>
 
 </html>
