--- a/index.html
+++ b/index.html
@@ -273,34 +273,11 @@
             <a role="button" class="btn btn-link" href=tel:12065551234><i class="fa fa-phone fa-lg text-primary"></i> 1-206-555-1234</a></br>
             <a role=button class="btn btn-link" href=mailto:campsites@nucamp.co><i class="fa fa-envelope-o fa-lg text-primary"></i> campsites@nucamp.co</a>
         </div>
-        
+    </div>
     </footer>
 
     <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
-    <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
-    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    
-    <script>
-        $('#reserveModal').modal('focus')
-    </script>
-   
-   <script>
-    $(function() {
-        $(".carousel").carousel( { interval: 2000 } );
-        $("#carouselButton").click(function(){
-            if ($("#carouselButton").children("i").hasClass("fa-pause")) {
-                $(".carousel").carousel("pause");
-                $("#carouselButton").children("i").removeClass("fa-pause");
-                $("#carouselButton").children("i").addClass("fa-play");
-            } else {
-                $(".carousel").carousel("cycle");
-                $("#carouselButton").children("i").removeClass("fa-play");
-                $("#carouselButton").children("i").addClass("fa-pause"); 
-            }
-        });
-    });
-</script>
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
