--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <h2>a better way to camp</h2>
                 </div>
                 <div class="col-md-4 col-xl-2">
-                    <button role="button" class="btn btn-lg btn-info" data-toggle="modal" data-target="#reserveModal">Reserve Campsite</button>
+                    <button role="button" class="btn btn-lg btn-info" id="#reserveButton">Reserve Campsite</button>
                 </div>
             </div>
         </div>
@@ -112,7 +112,7 @@
                 <li class="navbar-item "> <a class=nav-link href="contactus.html"><i class="fa fa-address-card fa-lg"> Contact </i></a></li>
                 </ul>
                 <span class="navbar-text ml-auto">
-                    <a data-toggle="modal" data-target="#loginModal">
+                    <a id="loginButton">
                         <i class="fa fa-sign-in"></i> Login
                     </a>
                 </span>
@@ -190,14 +190,9 @@
                             <span class="sr-only">Next</span>
                         </a>
                 </div>
-                <div class="btn-group" id="carouselButton">
-                    <button class="btn btn-danger btn-sm" id="carouselPause">
+                    <button class="btn btn-danger btn-sm" id="carouselButton">
                         <i class="fa fa-pause"></i>
                     </button>
-                    <button class="btn btn-danger btn-sm" id="carouselPlay">
-                        <i class="fa fa-play"></i>
-                    </button>
-                </div>
                 </div>
             </div>
         </div>
